[gd_scene load_steps=2 format=2]

[ext_resource path="res://actor_states/ai_states/UpAndDown.gd" type="Script" id=1]

[node name="UpAndDown" type="Node2D"]
script = ExtResource( 1 )
tiles_one_way = 5.0
duration_one_way = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
